--- a/_posts/2018-04-06.md
+++ b/_posts/2018-04-06.md
@@ -1,5 +1,5 @@
 ---
-Finalizing Design
+title:Finalizing Design
 ---
 
 After I made several design sketches, I decided to pick one design to move forward with and make a more fleshed out design.
