--- a/_posts/2018-04-06-second.md
+++ b/_posts/2018-04-06-second.md
@@ -4,7 +4,7 @@ title: Finalizing Design
 
 After I made several design sketches, I decided to pick one design to move forward with and make a more fleshed out design.
 
-<img src="assets/finalsketch.PNG">
+<img src="/blog/assets/finalsketch.PNG">
 
 This site uses elements from the earlier sketches I made. I still have 4 main pages: the homepage, the about page, the works page, and a contact page. I'm not sure if I want to keep the contact page, since it seems like something that could easily be combined with the about page.
 
