--- a/_posts/2018-04-13-third.md
+++ b/_posts/2018-04-13-third.md
@@ -4,14 +4,20 @@ title: Starting to Code
 
 This week, I started coding my website.
 
-<iframe src="https://gordc262.github.io/portfolio/index.html"></iframe>
+<img src="assets/website1.png">
 
 I have the homepage and the about page pretty much the way I wanted them — I used a simple codepen as a source for the eyes which I plan on re-writing later myself when I get more in depth with JavaScript. 
 
+<img src="assets/website2.png">
+<br><br>
+<img src="website3.png">
+
 The works page is almost finished, but not quite. I want to have a preview image, or maybe even a preview carousel of images, show up when the user hovered over the name of the project, but I haven't figured that out yet. I also may still move around things on the individual project page.
+
+<img src="assets/website4.png">
 
 The website right now is serviceable, for the most part, but not too exciting and doesn't have many interactions. I plan to come up with an idea of how I want to utilize more interactions, like text moving or changing slightly on hover, and figure out how to implement them. 
 
 I also need to think more about responsive design — right now the website doesn't make any sense on mobile or on smaller screens.
 
-<img src="assets/screenshot.png">
+<img class="mobile" src="assets/screenshot.png">
