--- a/_posts/2018-04-13-third.md
+++ b/_posts/2018-04-13-third.md
@@ -10,7 +10,7 @@ I have the homepage and the about page pretty much the way I wanted them — I u
 
 <img src="assets/website2.png">
 <br><br>
-<img src="website3.png">
+<img src="assets/website3.png">
 
 The works page is almost finished, but not quite. I want to have a preview image, or maybe even a preview carousel of images, show up when the user hovered over the name of the project, but I haven't figured that out yet. I also may still move around things on the individual project page.
 
