--- a/_posts/2018-05-04-post.md
+++ b/_posts/2018-05-04-post.md
@@ -11,6 +11,6 @@ One of the most significant pieces of feedback I got was about the "works" page 
 Some more feedback I got was that it was cumbersome to click back every time they wanted to look at another work. Many portfolios have all their work on one page that the user can just scroll through. In order to combat this, I added arrows on the bottom of the pages that lead to the next and previous items in my list.
 
 <img src="/blog/assets/may41.png">
-<img src="/blog/assets/may42.png">
+<img class="mobile" src="/blog/assets/may42.png">
 
 In the last few days I will be smoothing out the website and code and testing it on different screens to make sure it looks good and functions well on other devices.
